src/core/snapshots/hed__core__hosts_info__tests__lines_to_content_mac.snap
---
source: src/core/hosts_info.rs
expression: new_content_mac
---
"\n\n\n\n#    comment\n\n172.16.254.1 a.com c.com c.com # ##     comment\n\n\n\n\n\n172.16.254.1 d.com c.com\n\n2402:1200:4f00:1234:0000:5678:9abc:def0 b.com\n\n#   中文内容\n127.0.0.1 e.com\n#(hed) 127.0.0.1 f.com\n\n\n"
