src/core/snapshots/hed__core__hosts_info__tests__lines_to_map.snap
---
source: src/core/hosts_info.rs
expression: map
---
{
    "172.16.254.1": Hosts {
        enabled: {
            "a.com",
            "c.com",
            "d.com",
        },
        disabled: {},
    },
    "2402:1200:4f00:1234:0000:5678:9abc:def0": Hosts {
        enabled: {
            "b.com",
        },
        disabled: {},
    },
    "127.0.0.1": Hosts {
        enabled: {
            "e.com",
        },
        disabled: {
            "f.com",
        },
    },
}
