src/core/snapshots/hed__core__hosts_info__tests__map.snap
---
source: src/core/hosts_info.rs
assertion_line: 108
expression: hosts_info.map
---
{
    "172.16.254.1": IpHosts {
        ip: "172.16.254.1",
        hosts: {
            "a.com",
            "c.com",
            "d.com",
        },
    },
    "2402:1200:4f00:1234:0000:5678:9abc:def0": IpHosts {
        ip: "2402:1200:4f00:1234:0000:5678:9abc:def0",
        hosts: {
            "b.com",
        },
    },
    "127.0.0.1": IpHosts {
        ip: "127.0.0.1",
        hosts: {
            "e.com",
        },
    },
}
